# N8N-MCP-workflow-Builder

./: .gitignore  LICENSE  README.md
electron-app/: AUTO_UPDATE_SYSTEM_PLAN.md  CLI_TEST_RESULTS.md  EULA.txt  POWERSHELL_DISTRIBUTION.md  add-import.js  electron-builder.yml  n8n_middleware_commands.md  package.json  rules.md  start_server.js  test_workflow_export.json  tsconfig.json  workflow_original.json  workflow_original_utf8.json  workflow_update.json  workflows.json
electron-app/renderer/: index.html  renderer.js  updater-ui.js
electron-app/scripts/: compile-bytecode.js  flip-fuses.js  install.ps1  launcher.js  package-portable.ps1  uninstall.ps1  win-sign.js
electron-app/src/: api-server.ts  cdp-client.ts  cli.ts  main.ts  preload.ts  updater.ts
mcp-server/: package.json
mcp-server/src/: license.ts  server.ts  server.ts.bak
rust-core/: Cargo.toml  n8n_agent_tool.js  schema_driven_arch_builder.js
rust-core/src/: lib.rs  main.rs  schema.rs  validator.rs  workflow.rs
skills/: README.md
skills/n8n-ai-connections/: SKILL.md
skills/n8n-expression-syntax/: SKILL.md
skills/n8n-middleware-tools/: SKILL.md
skills/n8n-node-configuration/: SKILL.md
skills/n8n-validation-expert/: SKILL.md
skills/n8n-workflow-patterns/: SKILL.md
